# achus-sftp

./: .replit  README.md  SETUP_COMPLETE.md  design_guidelines.md  env_sample  npm-wrapper.sh  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.sh  vite.config.ts
.local/state/replit/agent/filesystem/: filesystem_state.json
backend/: config.py  init_db.py  main.py
backend/auth/: security.py
backend/database/: db.py  seeds.py
backend/models/: __init__.py  file.py  user.py
backend/routes/: auth.py  files.py  folder_assignments.py  roles.py  users.py
backend/services/: s3_service.py
client/: index.html
client/src/: App.tsx  index.css
client/src/api/: api.ts
client/src/components/: CopyFileDialog.tsx  DeleteConfirmDialog.tsx  EmptyState.tsx  FileCard.tsx  FileUploadDialog.tsx  FileUploadZone.tsx  Footer.tsx  Header.tsx  Layout.tsx  ShareLinkDialog.tsx  UploadProgress.tsx  UserMenu.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: fileUtils.ts
client/src/pages/: AdminPanel.tsx  Dashboard.tsx  LoginPage.tsx  home.tsx  landing.tsx  login.tsx
db/migrations/: 0001_add_password_hash.sql  0002_add_can_share_to_folder_assignments.sql
server/: index.ts
shared/: schema.ts
